--- a/index.html
+++ b/index.html
@@ -11,58 +11,82 @@
     <header>
         <img src="./Assets/img-tea-cozy-logo.png" alt="logo">
         <nav>
-            <ul>
-                <li>Mission</li>
-                <li>Featured Tea</li>
-                <li>Locations</li>
-            </ul>
+            <a href="#mission">Mission</a>
+            <a href="#featured-tea">Featured Tea</a>
+            <a href="#locations">Locations</a>
         </nav>
     </header>
 
-    <main>
-        <div>
+    <main class="container">
+        <div id="mission" class="mission">
             <h2>Our Mission</h2>
-            <p>Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
+            <h4>Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </main>
 
     <section id="featured-tea" class="featured-tea">
-        <div>
+        <div class="featured-tea-headers">
             <h2>Tea of the Month</h2>
-            <h3>What's steeping at The Tea Cozy?</h3>
-                <img src="./Assets/img-berryblitz.jpeg" alt="Photo of Berry Blitz">
-                    <h3>Fall Berry Blitz</h3>
-                <img src="./Assets/img-spiced-rum.jpeg" alt="Photo of Spiced Rum Tea">
-                    <h3>Spiced Rum Tea</h3>
-                <img src="./Assets/img-donut.jpeg" alt="Photo of Donut">
-                    <h3>Seasonal Donuts</h3>
-                <img src="./Assets/img-myrtle-ave.jpeg" alt="Photo of Myrtle Ave Tea">
-                    <h3>Myrtle Ave Tea</h3>
-                <img src="./Assets/img-bedford-bizarre.jpeg" alt="Photo of Bedford Bizarre Tea">
-                    <h3>Bedford Bizarre Tea</h3>
+            <h4>What's steeping at The Tea Cozy?</h4>
         </div>
+            <div class="featured-tea-container">
+                <figure>
+                    <img src="./Assets/img-berryblitz.jpeg" alt="Photo of Berry Blitz">
+                    <figcaption>Fall Berry Blitz Tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="./Assets/img-spiced-rum.jpeg" alt="Photo of Berry Blitz">
+                    <figcaption>Spiced Rum Tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="./Assets/img-donut.jpeg" alt="Photo of Berry Blitz">
+                    <figcaption>Seasonal Donuts</figcaption>
+                </figure>
+                <figure>
+                    <img src="./Assets/img-myrtle-ave.jpeg" alt="Photo of Berry Blitz">
+                    <figcaption>Myrtle Ave Tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="./Assets/img-bedford-bizarre.jpeg" alt="Photo of Berry Blitz">
+                    <figcaption>Bedford Bizarre Tea</figcaption>
+                </figure>
+            </div>
     </section>
 
     <section id="locations" class="locations">
-        <div>
-            <p>Downtown</p>
-            <p>384 West 4th St</p>
-            <p>Suite 108</p>
-            <p>Portland, Maine</p>
-        </div>
-        <div>
-            <p>East Bayside</p>
-            <p>3433 Phisherman's Avenue</p>
-            <p>(Northwest Corner)</p>
-            <p>Portland, Maine</p>
-        </div>
-        <div>
-            <p>Oakdale</p>
-            <p>515 Crescent Avenue</p>
-            <p>Second Floor</p>
-            <p>Portland, Maine</p>
+        <h2>Locations</h2>
+        <div class="locations-container">
+            <div class="location">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="location">
+                <h3>East Bayside</h3>
+                <p>3433 Phisherman's Avenue</p>
+                <p>(Northwest Corner)</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="location">
+                <h3>Oakdale</h3>
+                <p>515 Crescent Avenue</p>
+                <p>Second Floor</p>
+                <p>Portland, Maine</p>
+            </div>
         </div>
     </section>
+
+    <footer>
+        <div class="contact">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
+        <div class="copyright">
+            <h5>copyright The Tea Cozy 2017</h5>
+        </div>
+    </footer>
     
 </body>
 </html>
